Update README with project details and setup instructions
Added detailed project information, features, technologies used, and setup instructions to the README file.